k8s/services/user-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
